# bevy_prototype_character_controller

./: .gitignore  Cargo.toml  README.md  index.md
example_utils/: utils.rs
examples/: events.rs  first_person.rs  physx.rs  pseudo_isometric.rs  rapier3d.rs  third_person.rs
src/: controller.rs  events.rs  input_map.rs  lib.rs  look.rs  physx.rs  rapier.rs  translation.rs
