[package]
name = "bevy_prototype_character_controller"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = []

[dependencies]
bevy = "0.2.1"

[dev-dependencies]
bevy_prototype_physx = { path = "https://github.com/superdump/bevy_prototype_physx" }
bevy_rapier3d = { git = "https://github.com/superdump/bevy_rapier", branch = "predict-for-render", features = [ "simd-stable", "parallel" ] }
physx = { git = "https://github.com/superdump/physx-rs", branch = "send-sync-and-locks" }
rand = "0.7.3"
