[package]
name = "bevy_prototype_character_controller"
version = "0.1.0"
authors = ["Robert Swain <robert.swain@gmail.com>"]
edition = "2018"
license = "MIT"

[features]
default = []
use_physx = [ "bevy_prototype_physx", "physx" ]
use_rapier = [ "bevy_rapier3d" ]

[dependencies]
bevy = "0.5"
bevy_prototype_physx = { git = "https://github.com/superdump/bevy_prototype_physx", optional = true }
bevy_rapier3d = { version = "0.11", features = [ "parallel", "simd-stable" ], optional = true }
physx = { git = "https://github.com/superdump/physx-rs", branch = "send-sync-and-locks", optional = true }

[dev-dependencies]
clap = "2.33"
rand = "0.8"
